--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
+        "bmewburn.vscode-intelephense-client",
         "davidanson.vscode-markdownlint",
         "EditorConfig.EditorConfig"
     ]
