--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
     "recommendations": [
-        "bmewburn.vscode-intelephense-client",
-        "davidanson.vscode-markdownlint",
-        "EditorConfig.EditorConfig"
+      "bmewburn.vscode-intelephense-client",
+      "davidanson.vscode-markdownlint",
+      "editorconfig.editorconfig",
+      "ikappas.composer"
     ]
 }
