--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
-  "require": {}
+  "require": {
+    "michelf/php-markdown": "^1.9",
+    "michelf/php-smartypants": "^1.8",
+    "spatie/yaml-front-matter": "^2.0"
+  }
 }
