Initialize scalable graphics embedding

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
     "default": true,
     "line-length": false
   },
+  "markdownlint.ignore": [
+    "**/LICENSE.md"
+    ],
   "[markdown]": {
     "editor.wordWrap": "wordWrapColumn",
     "editor.wordWrapColumn": 80,
