Move common settings in workspace
(`settings.json` has  to contain only data related to building folder)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,28 +2,5 @@
   "css.format.newlineBetweenRules": true,
   "css.format.newlineBetweenSelectors": true,
   "css.format.spaceAroundSelectorSeparator": true,
-  "editor.bracketPairColorization.enabled": true,
-  "editor.guides.bracketPairs": "active",
-  "editor.guides.bracketPairsHorizontal": "active",
-  "editor.renderWhitespace": "all",
-  "editor.rulers": [
-    80
-  ],
-  "editor.wordWrap": "wordWrapColumn",
-  "editor.wordWrapColumn": 80,
-  "files.trimTrailingWhitespace": true,
-  "git.enableCommitSigning": true,
-  "html.format.wrapLineLength": 0,
-  "markdownlint.config": {
-    "default": true,
-    "line-length": false
-  },
-  "markdownlint.ignore": [
-    "**/LICENSE.md"
-    ],
-  "[markdown]": {
-    "editor.wordWrap": "wordWrapColumn",
-    "editor.wordWrapColumn": 80,
-    "files.trimTrailingWhitespace": false
-  }
+  "html.format.wrapLineLength": 0
 }
