--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,9 @@
   RewriteBase /
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
+# Rewriting rules for version 2
+  # Pages temporarily unavailable
+    RewriteRule ^resume$ /error-302 [R=302,L]
 # Rewriting rules for version 3
   # Pages permanently moved
     RewriteRule ^about=contact$ /contact [R=301]
