Add rewriting rules for version 1

--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,91 @@
   RewriteBase /
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
+# Rewriting rules for version 1
+  # Pages temporarily unavailable
+    RewriteRule ^epub=allison$ /error-302 [R=302,L]
+    RewriteRule ^epub=arsene-lupin-vie$ /error-302 [R=302,L]
+    RewriteRule ^epub=bodichiev$ /error-302 [R=302,L]
+    RewriteRule ^epub=brume-cendres$ /error-302 [R=302,L]
+    RewriteRule ^epub=casino-perdu$ /error-302 [R=302,L]
+    RewriteRule ^epub=chamane-detective-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=chamane-detective-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=chroniques-desespoir$ /error-302 [R=302,L]
+    RewriteRule ^epub=cite-tenebres$ /error-302 [R=302,L]
+    RewriteRule ^epub=club$ /error-302 [R=302,L]
+    RewriteRule ^epub=comedie-inhumaine-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=comedie-inhumaine-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=demi-loup-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=demi-loup-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=derniers-jours-mai$ /error-302 [R=302,L]
+    RewriteRule ^epub=devoreur$ /error-302 [R=302,L]
+    RewriteRule ^epub=dico-feerique-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=dico-feerique-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=dur-silence-neige$ /error-302 [R=302,L]
+    RewriteRule ^epub=eclat-givre$ /error-302 [R=302,L]
+    RewriteRule ^epub=epee-hiver$ /error-302 [R=302,L]
+    RewriteRule ^epub=eschaton$ /error-302 [R=302,L]
+    RewriteRule ^epub=espion-etrange$ /error-302 [R=302,L]
+    RewriteRule ^epub=extreme$ /error-302 [R=302,L]
+    RewriteRule ^epub=fenetre-diane$ /error-302 [R=302,L]
+    RewriteRule ^epub=flammes-nuit$ /error-302 [R=302,L]
+    RewriteRule ^epub=gagner-guerre$ /error-302 [R=302,L]
+    RewriteRule ^epub=garcon-dore$ /error-302 [R=302,L]
+    RewriteRule ^epub=geste-lyon$ /error-302 [R=302,L]
+    RewriteRule ^epub=glaces-temps$ /error-302 [R=302,L]
+    RewriteRule ^epub=hercule-poirot-vie$ /error-302 [R=302,L]
+    RewriteRule ^epub=janua-vera$ /error-302 [R=302,L]
+    RewriteRule ^epub=je-suis-sang$ /error-302 [R=302,L]
+    RewriteRule ^epub=lee-winters$ /error-302 [R=302,L]
+    RewriteRule ^epub=livre-enigme-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=monty-python$ /error-302 [R=302,L]
+    RewriteRule ^epub=naoki-urasawa$ /error-302 [R=302,L]
+    RewriteRule ^epub=ombre-vallee$ /error-302 [R=302,L]
+    RewriteRule ^epub=or-nuit$ /error-302 [R=302,L]
+    RewriteRule ^epub=orages-terre-france$ /error-302 [R=302,L]
+    RewriteRule ^epub=pax-germanica-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=pax-germanica-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=paysage-dechire$ /error-302 [R=302,L]
+    RewriteRule ^epub=peninsule$ /error-302 [R=302,L]
+    RewriteRule ^epub=porcelaine$ /error-302 [R=302,L]
+    RewriteRule ^epub=poupee-yeux-morts$ /error-302 [R=302,L]
+    RewriteRule ^epub=prisonnier-planete-mars$ /error-302 [R=302,L]
+    RewriteRule ^epub=psychogeographie$ /error-302 [R=302,L]
+    RewriteRule ^epub=qi-changez-bocal$ /error-302 [R=302,L]
+    RewriteRule ^epub=rois-du-monde-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=rois-du-monde-tome-2-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=roman-croix-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=roman-croix-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=roman-croix-tome-3$ /error-302 [R=302,L]
+    RewriteRule ^epub=sentiers-astres-tome-1$ /error-302 [R=302,L]
+    RewriteRule ^epub=sentiers-astres-tome-2$ /error-302 [R=302,L]
+    RewriteRule ^epub=sherlock-holmes-vie$ /error-302 [R=302,L]
+    RewriteRule ^epub=sovok$ /error-302 [R=302,L]
+    RewriteRule ^epub=super-heros$ /error-302 [R=302,L]
+    RewriteRule ^epub=suriedad$ /error-302 [R=302,L]
+    RewriteRule ^epub=tancrede$ /error-302 [R=302,L]
+    RewriteRule ^epub=trilogie-latium$ /error-302 [R=302,L]
+    RewriteRule ^epub=vallee-temps-profond$ /error-302 [R=302,L]
+    RewriteRule ^epub=wastburg$ /error-302 [R=302,L]
+    RewriteRule ^epub=zombies$ /error-302 [R=302,L]
+    RewriteRule ^logo=gizmecano$ /error-302 [R=302,L]
+    RewriteRule ^logo=gizmecano$ /error-302 [R=302,L] /error-302 [R=302,L]
+    RewriteRule ^logo=igloojunior$ /error-302 [R=302,L]
+    RewriteRule ^logo=mergey$ /error-302 [R=302,L]
+    RewriteRule ^services$ /error-302 [R=302,L]
+    RewriteRule ^site=annapurna$ /error-302 [R=302,L]
+    RewriteRule ^site=blog-moutons-electriques$ /error-302 [R=302,L]
+    RewriteRule ^site=captainbooks$ /error-302 [R=302,L]
+    RewriteRule ^site=clepsydre$ /error-302 [R=302,L]
+    RewriteRule ^site=gizmecano$ /error-302 [R=302,L]
+    RewriteRule ^site=igloojunior$ /error-302 [R=302,L]
+    RewriteRule ^site=jose-sanchez$ /error-302 [R=302,L]
+    RewriteRule ^site=mergey$ /error-302 [R=302,L]
+    RewriteRule ^site=metaphoricon$ /error-302 [R=302,L]
+    RewriteRule ^site=mno$ /error-302 [R=302,L]
+    RewriteRule ^site=moutons-electriques$ /error-302 [R=302,L]
+    RewriteRule ^site=sf-aubenas-2013$ /error-302 [R=302,L]
+    RewriteRule ^site=yellow-submarine$ /error-302 [R=302,L]
 # Rewriting rules for version 2
   # Pages temporarily unavailable
     RewriteRule ^resume$ /error-302 [R=302,L]
